Code cleanup Remove no-ops, charset string, unreadable operators